--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "firebase": "^7.14.2",
     "rxfire": "^3.12.2",
     "rxjs": "^6.5.5",
